# Caesar

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Project.toml  README.md  agents.jl  api.json  calc_summary.jl  calcs.jl  cli.jl  events.jl  instructions.md  json_io.jl  main.jl  mcp_client.jl  mcp_servers.json  models.jl  repl.jl  safety.jl  scheduler.jl  soul.md  test_mcp.jl  tui.jl  validate_ex.jl
agents/calc/: soul.md
agents/prosca/: config.yaml  instructions.md
commands/: clear-memory.jl  install-plugins.jl  model.jl
docs/plans/: 2026-03-15-channel-gateway.md  2026-03-16-multi-agent-system.md  2026-03-16-repl-runtime.md
docs/specs/: 2026-03-15-channel-gateway-design.md  2026-03-15-multi-agent-system-design.md  2026-03-16-repl-runtime-design.md
gateway/: gateway.jl  mail_api.jl  mail_auth.jl  telegram.jl  telegram_api.jl
gui/: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  (+2 more)
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs  sidecar.rs
ori/: activation.jl  bm25.jl  db.jl  demo.jl  embeddings.jl  engine.jl  fusion.jl  graph.jl  intent.jl  learning.jl  pagerank.jl  semantic.jl  tfidf.jl  types.jl  vault.jl  vitality.jl  warmth.jl
skills/: browser.jl  browser.md  captcha.jl  captcha.md  domstate.js
tests/: test_calcs.jl  test_calcs_llm.jl  test_cli.jl  test_message.jl  test_repl.jl
tools/: check_email.jl  git_branch_and_pr.jl  prune_memories.jl  read_email.jl  send_email.jl  web_search.jl
(+60 files in other folders)
